[gd_scene load_steps=15 format=3 uid="uid://d2blf47mp60vc"]

[ext_resource type="Script" path="res://objects/game/Game.gd" id="1_wdln6"]
[ext_resource type="Texture2D" uid="uid://dnaqtv86h5d86" path="res://objects/game/jahn.png" id="2_puim7"]
[ext_resource type="PackedScene" uid="uid://dgy4tp8mfi15f" path="res://objects/game/gorfyard.tscn" id="3_o270y"]
[ext_resource type="PackedScene" uid="uid://0jmxgwn2piuj" path="res://objects/game/Oven.tscn" id="3_x11yu"]
[ext_resource type="Texture2D" uid="uid://jc2hl6vp4etw" path="res://objects/game/noodles.png" id="3_yi368"]
[ext_resource type="Texture2D" uid="uid://wcshxctg8e4y" path="res://objects/game/sauces.png" id="4_oepu2"]
[ext_resource type="PackedScene" uid="uid://i83ucfqsyp5g" path="res://objects/stacker/Stacker.tscn" id="4_wr4ig"]
[ext_resource type="Texture2D" uid="uid://da3ftpna0l5qn" path="res://objects/game/trash.png" id="5_a1mqv"]
[ext_resource type="Texture2D" uid="uid://bu3gci7ticosj" path="res://objects/game/cheeses.png" id="5_j5dbj"]
[ext_resource type="Texture2D" uid="uid://1ikxy86aabls" path="res://objects/stacker/baking-dish-clipart-26197.jpg" id="5_m3ce0"]
[ext_resource type="Texture2D" uid="uid://bdo7dslw51x44" path="res://objects/game/meats.png" id="6_lwaik"]

[sub_resource type="GDScript" id="GDScript_ucyyc"]
script/source = "extends Node2D

func _input(event):
	event = event as InputEventKey
	if event:
		if event.echo:
			return
		var modified = event.keycode == KEY_SHIFT and event.pressed or event.shift_pressed and event.pressed
		visible = !modified
"

[sub_resource type="GDScript" id="GDScript_ef1sx"]
script/source = "extends Node2D

@onready var q = $Q
@onready var w = $W
@onready var e = $E
@onready var r = $R

func _input(event):
	event = event as InputEventKey
	if event:
		if event.echo:
			return
		var modified = event.keycode == KEY_SHIFT and event.pressed or event.shift_pressed and event.pressed
		
		for child in [q, w, e, r]:
			child.visible = modified
"

[sub_resource type="GDScript" id="GDScript_jof5t"]
script/source = "extends Label

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"Score: \" + str(get_tree().get_first_node_in_group(\"game\").score)
"

[node name="GameStuff" type="Node2D" groups=["game"]]
script = ExtResource("1_wdln6")

[node name="Jahnathan" type="Sprite2D" parent="."]
position = Vector2(892, 605)
texture = ExtResource("2_puim7")

[node name="Gorfyard" parent="." instance=ExtResource("3_o270y")]

[node name="Plate" parent="." instance=ExtResource("4_wr4ig")]
position = Vector2(432, 593)
scale = Vector2(0.2264, 0.2264)
texture = ExtResource("5_m3ce0")

[node name="Trash" type="Sprite2D" parent="."]
position = Vector2(209, 548)
texture = ExtResource("5_a1mqv")

[node name="Ingredient0" type="Sprite2D" parent="."]
position = Vector2(590, 454)
texture = ExtResource("3_yi368")

[node name="Ingredient1" type="Sprite2D" parent="."]
position = Vector2(687, 355)
texture = ExtResource("4_oepu2")

[node name="Ingredient2" type="Sprite2D" parent="."]
position = Vector2(802, 450)
texture = ExtResource("5_j5dbj")

[node name="Ingredient3" type="Sprite2D" parent="."]
position = Vector2(680, 528)
texture = ExtResource("6_lwaik")

[node name="Oven0" parent="." instance=ExtResource("3_x11yu")]
position = Vector2(126, 450)

[node name="Oven1" parent="." instance=ExtResource("3_x11yu")]
position = Vector2(217, 356)

[node name="Oven2" parent="." instance=ExtResource("3_x11yu")]
position = Vector2(299, 435)

[node name="UI" type="Node2D" parent="."]
position = Vector2(679, 438)
script = SubResource("GDScript_ucyyc")

[node name="Q" type="Label" parent="UI"]
offset_left = -170.0
offset_top = 11.0
offset_right = -130.0
offset_bottom = 37.0
text = "Q
"

[node name="W" type="Label" parent="UI"]
offset_left = -53.0
offset_top = -90.0
offset_right = -13.0
offset_bottom = -64.0
text = "W"

[node name="E" type="Label" parent="UI"]
offset_left = 69.0
offset_top = -4.0
offset_right = 109.0
offset_bottom = 22.0
text = "E"

[node name="R" type="Label" parent="UI"]
offset_left = -57.0
offset_top = 74.0
offset_right = -17.0
offset_bottom = 100.0
text = "R"

[node name="UI2" type="Node2D" parent="."]
position = Vector2(176, 430)
script = SubResource("GDScript_ef1sx")

[node name="Shift" type="Label" parent="UI2"]
offset_left = -171.0
offset_top = -62.0
offset_right = -126.0
offset_bottom = -36.0
text = "Shift+"

[node name="Q" type="Label" parent="UI2"]
visible = false
offset_left = -125.0
offset_top = 3.0
offset_right = -85.0
offset_bottom = 29.0
text = "Q
"

[node name="W" type="Label" parent="UI2"]
visible = false
offset_left = -26.0
offset_top = -89.0
offset_right = 14.0
offset_bottom = -63.0
text = "W"

[node name="E" type="Label" parent="UI2"]
visible = false
offset_left = 69.0
offset_top = -4.0
offset_right = 109.0
offset_bottom = 22.0
text = "E"

[node name="R" type="Label" parent="UI2"]
visible = false
offset_left = -35.0
offset_top = 113.0
offset_right = 5.0
offset_bottom = 139.0
text = "R"

[node name="Score" type="Label" parent="."]
offset_left = 668.0
offset_top = 14.0
offset_right = 708.0
offset_bottom = 37.0
text = "SCORE: 0"
script = SubResource("GDScript_jof5t")
